# django-tasks

./: .gitignore  compose.yml  manage.py  pyproject.toml
tasks/: __init__.py  admin.py  listeners.py  models.py  tasks.py
tasks/management/commands/: listen.py
tasks/migrations/: 0001_initial.py
test/: settings.py  urls.py  views.py  wsgi.py
